syntax = "proto3";

package task.v1;

import "google/protobuf/timestamp.proto";

option go_package = "/task";

enum EventType {
  TaskCreated = 0;
  TaskUpdated = 1;
  TaskDeleted = 3;
}

enum TopicType {
  CUD = 0;
  LifeCycle = 1;
}

message BaseEvent {
  google.protobuf.Timestamp created_at = 1;
  TopicType topic_type = 2;
  EventType event_type = 3;
  TaskV1 data = 4;
}

message TaskV1 {
  int64 id = 1;
  string title = 2;
  string description = 3;
  string customer_id = 4;
  string executor_id = 5;
  TaskStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

enum TaskStatus {
  PENDING = 0;
  PROCESSING = 1;
  DONE = 2;
}
